--- a/.htaccess
+++ b/.htaccess
@@ -1,26 +1,54 @@
-<IfModule mod_rewrite.c>
-    Options +FollowSymlinks
-    RewriteEngine On
-</IfModule>
+# <IfModule mod_rewrite.c>
+#     Options +FollowSymlinks
+#     RewriteEngine On
+# </IfModule>
  
-<IfModule mod_rewrite.c>
-    # если /admin, то в backend
-    RewriteCond %{REQUEST_URI} ^/(admin)
-    RewriteRule ^admin/assets/(.*)$ backend/web/assets/$1 [L]
-    RewriteRule ^admin/css/(.*)$ backend/web/css/$1 [L]
-    RewriteRule ^admin/js/(.*)$ backend/web/js/$1 [L]
-    RewriteCond %{REQUEST_URI} !^/backend/web/(assets|js|css|js)/
-    RewriteCond %{REQUEST_URI} ^/(admin)
-    RewriteRule ^.*$ backend/web/index.php [L]
-    RewriteCond %{REQUEST_URI} ^/(assets|css|js|images)
-    RewriteRule ^assets/(.*)$ frontend/web/assets/$1 [L]
-    RewriteRule ^css/(.*)$ frontend/web/css/$1 [L]
-    RewriteRule ^js/(.*)$ frontend/web/js/$1 [L]
-    RewriteRule ^images/(.*)$ frontend/web/images/$1 [L]
-    RewriteRule ^(.*)$ frontend/web/$1 [L]
-    RewriteCond %{REQUEST_URI} !^/(frontend|backend)/web/(assets|css|js)/
-    RewriteCond %{REQUEST_URI} !index.php
-    RewriteCond %{REQUEST_FILENAME} !-f [OR]
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^.*$ frontend/web/index.php
+# <IfModule mod_rewrite.c>
+#     # если /admin, то в backend
+#     RewriteCond %{REQUEST_URI} ^/(admin)
+#     RewriteRule ^admin/assets/(.*)$ backend/web/assets/$1 [L]
+#     RewriteRule ^admin/css/(.*)$ backend/web/css/$1 [L]
+#     RewriteRule ^admin/js/(.*)$ backend/web/js/$1 [L]
+#     RewriteCond %{REQUEST_URI} !^/backend/web/(assets|js|css|js)/
+#     RewriteCond %{REQUEST_URI} ^/(admin)
+#     RewriteRule ^.*$ backend/web/index.php [L]
+#     RewriteCond %{REQUEST_URI} ^/(assets|css|js|images)
+#     RewriteRule ^assets/(.*)$ frontend/web/assets/$1 [L]
+#     RewriteRule ^css/(.*)$ frontend/web/css/$1 [L]
+#     RewriteRule ^js/(.*)$ frontend/web/js/$1 [L]
+#     RewriteRule ^images/(.*)$ frontend/web/images/$1 [L]
+#     RewriteRule ^(.*)$ frontend/web/$1 [L]
+#     RewriteCond %{REQUEST_URI} !^/(frontend|backend)/web/(assets|css|js)/
+#     RewriteCond %{REQUEST_URI} !index.php
+#     RewriteCond %{REQUEST_FILENAME} !-f [OR]
+#     RewriteCond %{REQUEST_FILENAME} !-d
+#     RewriteRule ^.*$ frontend/web/index.php
+# </IfModule>
+
+php_value memory_limit 512M
+# prevent directory listings
+Options -Indexes
+IndexIgnore */*
+
+<IfModule mod_deflate.c>
+  AddOutputFilterByType DEFLATE text/html text/plain text/css application/json
+  AddOutputFilterByType DEFLATE text/javascript application/javascript application/x-javascript
+  AddOutputFilterByType DEFLATE text/xml application/xml text/x-component
+  AddOutputFilterByType DEFLATE application/x-font-ttf application/x-font-opentype image/svg+xml
 </IfModule>
+
+# follow symbolic links
+Options FollowSymlinks
+RewriteEngine on
+
+RewriteCond %{HTTP_HOST} ^www.(.*)$
+RewriteRule ^(.*)$ https://%1/$1 [L,R=301]
+
+#RewriteCond %{HTTPS} =off 
+#RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+
+RewriteRule ^admin/?(.{2,})?$ /backend/web/$1 [L,PT]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^([^/].*)?$ /frontend/web/$1
+
+Php_value max_execution_time 300
