--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "pheme/yii2-settings": "*",
         "yiisoft/yii2-bootstrap4": "^2.0",
         "dmstr/yii2-adminlte-asset": "^2.6",
-        "2amigos/yii2-ckeditor-widget": "~2.1"
+        "2amigos/yii2-ckeditor-widget": "~2.1",
+        "kartik-v/yii2-grid": "^3.5",
+        "kartik-v/yii2-editable": "^1.8"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
