--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "costa-rico/yii2-images": "*",
         "yiisoft/yii2-imagine": "^2.3",
         "kartik-v/yii2-widget-datepicker": "dev-master",
-        "kartik-v/yii2-date-range": "dev-master"
+        "kartik-v/yii2-date-range": "dev-master",
+        "kartik-v/yii2-widget-fileinput": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
