--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "yiisoft/yii2-imagine": "^2.3",
         "kartik-v/yii2-widget-datepicker": "dev-master",
         "kartik-v/yii2-date-range": "dev-master",
-        "kartik-v/yii2-widget-fileinput": "dev-master"
+        "kartik-v/yii2-widget-fileinput": "dev-master",
+        "paulzi/yii2-adjacency-list": "^2.2"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
